--- a/styles/style.css
+++ b/styles/style.css
@@ -78,7 +78,7 @@ header img {
 p {
     margin: var(--gutter);
 }
-  
+
 footer {
     position: fixed;
     width: 100%;
@@ -88,4 +88,18 @@ footer {
     justify-content: flex-end;
     background-color: var(--color3);
     box-shadow: var(--shadow);
+}
+
+.pizza p {
+    margin: 5px;
+}
+
+.pizza {
+    padding: 20px;
+    
+}
+
+.pizzas-list {
+    display: flex;
+    flex-wrap: wrap;
 }
