--- a/styles/style.css
+++ b/styles/style.css
@@ -103,3 +103,12 @@ footer {
     display: flex;
     flex-wrap: wrap;
 }
+
+.clothe {
+    box-shadow: 5px 5px 15px 5px #000000;
+}
+
+.clothes-list {
+    display: flex;
+    flex-wrap: wrap;
+}
