--- a/styles/style.css
+++ b/styles/style.css
@@ -112,3 +112,13 @@ footer {
     display: flex;
     flex-wrap: wrap;
 }
+
+.book {
+    text-align: center;
+    box-shadow: 5px 5px 15px 5px #000000;
+}
+
+.books-list {
+    display: flex;
+    flex-wrap: wrap;
+}
