--- a/styles/style.css
+++ b/styles/style.css
@@ -122,3 +122,13 @@ footer {
     display: flex;
     flex-wrap: wrap;
 }
+
+.candy {
+    text-align: center;
+    box-shadow: 5px 5px 15px 5px #000000;
+}
+
+.candies-list {
+    display: flex;
+    flex-wrap: wrap;
+}
